--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "i18next": "^23.4.6",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^13.2.1",
     "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
