--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://nrimawi.github.io/alpha-react",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
@@ -14,12 +13,14 @@
     "@testing-library/user-event": "^12.5.0",
     "i18next": "^23.4.6",
     "i18next-browser-languagedetector": "^7.1.0",
+    "jss-rtl": "^0.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^13.2.1",
     "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
