--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Alpha",
-  "name": "Alpha",
+ "short_name": "Alpha Cleaning Services",
+  "name": "Alpha Cleaning Services",
   "icons": [
     {
       "src": "favicon.ico",
