--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nrimawi.github.io/alpha-react",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +23,6 @@
     "redux": "^4.2.1",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^0.2.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
