--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "jss-rtl": "^0.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^13.2.1",
     "react-redux": "^8.1.2",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "styled-components": "^6.0.7",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^0.2.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
